logs/pysphere.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysphere'...
Listing './lib/python3.5/site-packages/pysphere/ZSI'...
Compiling './lib/python3.5/site-packages/pysphere/ZSI/ServiceContainer.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/ServiceContainer.py", line 78
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/TC.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/TC.py", line 940
    'unsignedInt':          (0, 4294967295L),
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/TCcompound.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/TCcompound.py", line 162
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/TCtimes.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/TCtimes.py", line 166
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/client.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/client.py", line 351
    raise RuntimeError, 'Expecting HTTP 401 response.'
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/dispatch.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/dispatch.py", line 77
    except EvaluateException, ex:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysphere/ZSI/generate'...
Compiling './lib/python3.5/site-packages/pysphere/ZSI/generate/commands.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/generate/commands.py", line 131
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/generate/containers.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/generate/containers.py", line 2029
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/generate/pyclass.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/generate/pyclass.py", line 133
    raise AttributeError,\
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/generate/wsdl2python.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/generate/wsdl2python.py", line 300
    except Wsdl2PythonError, ex:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/parse.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/parse.py", line 273
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysphere/ZSI/wstools'...
Compiling './lib/python3.5/site-packages/pysphere/ZSI/wstools/TimeoutSocket.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/wstools/TimeoutSocket.py", line 49
    except socket.error,why:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/wstools/Utility.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/wstools/Utility.py", line 640
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/ZSI/wstools/WSDLTools.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/wstools/WSDLTools.py", line 1578
    print "Warning:", \
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pysphere/ZSI/wstools/XMLSchema.py'...
***   File "./lib/python3.5/site-packages/pysphere/ZSI/wstools/XMLSchema.py", line 1207
    except NoSchemaLocationWarning, ex:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysphere/resources'...
Compiling './lib/python3.5/site-packages/pysphere/vi_performance_manager.py'...
***   File "./lib/python3.5/site-packages/pysphere/vi_performance_manager.py", line 277
    except (VI.ZSI.FaultException), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/vi_server.py'...
***   File "./lib/python3.5/site-packages/pysphere/vi_server.py", line 117
    except (VI.ZSI.FaultException), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/vi_task.py'...
***   File "./lib/python3.5/site-packages/pysphere/vi_task.py", line 110
    except (VI.ZSI.FaultException), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/vi_task_history_collector.py'...
***   File "./lib/python3.5/site-packages/pysphere/vi_task_history_collector.py", line 105
    except (VI.ZSI.FaultException), e:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pysphere/vi_virtual_machine.py'...
***   File "./lib/python3.5/site-packages/pysphere/vi_virtual_machine.py", line 109
    except (VI.ZSI.FaultException), e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pysphere-0.1.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
